fix: Resolve select filed is getting cropped

--- a/assets/src/scss/admin-dashboard/segments/legal-consents.scss
+++ b/assets/src/scss/admin-dashboard/segments/legal-consents.scss
@@ -65,7 +65,6 @@
   .tutor-legal-consent-card-content {
     display: block;
     max-height: 600px;
-    overflow: hidden;
     transition: max-height 0.3s ease-out, opacity 0.2s ease-out;
     opacity: 1;
   }
